Updated 21 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ blocks:
             term well-being.</p><p><a class="button"
             href="https://bookings.sukhavatibali.com/en/product/panchakarma">Book
             Now</a></p>
-        background-desktop-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
-        background-mobile-image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+        background-desktop-image: /uploads/KC-Regent-Arch-1.jpg
+        background-mobile-image: /uploads/KC-Regent-Arch-1.jpg
         videos:
             -
                 video_path: /uploads/WEBSITE-BANNER.mp4
@@ -68,7 +68,7 @@ blocks:
         scroll-items-color-scheme: highlight
         scroll-items:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-1.jpg
                 block-content-html: >-
                     <h3>VISUAL</h3> <h2>Brand aligned </h2> <p>We’ll custom
                     design your website to align with all the Regent brand
@@ -76,7 +76,7 @@ blocks:
                     typography. </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-2.jpg
                 block-content-html: >-
                     <h3>STRATEGIC</h3> <h2>Modern design</h2> <p>We’ll consider
                     all the best-practices of modern design and create a
@@ -84,7 +84,7 @@ blocks:
                     experience. </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-3.jpg
                 block-content-html: >-
                     <h3>FLEXIBLE</h3> <h2>Designed to grow</h2> <p>We’ll build
                     custom modular blocks that allow you to build unlimited
@@ -92,7 +92,7 @@ blocks:
                     your team to manage. </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-4.jpg
                 block-content-html: >-
                     <h3>RESPONSIVE</h3> <h2>Mobile-friendly</h2> <p>We’ll ensure
                     the website not only looks great across every browser &
@@ -100,7 +100,7 @@ blocks:
                     users.</p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-5.jpg
                 block-content-html: >-
                     <h3>PERFORMANCE </h3> <h2>Optimised for speed</h2> <p>Built
                     with modern tech stack and optimised for speed & performance
@@ -108,7 +108,7 @@ blocks:
                     lighting fast. </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-6.jpg
                 block-content-html: >-
                     <h3>SEARCH OPTIMISATION </h3> <h2>Built-in SEO</h2>
                     <p>Designed to meet all of Google’s performance standards &
@@ -116,7 +116,7 @@ blocks:
                     seamless SEO management. </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-7.jpg
                 block-content-html: >-
                     <h3>RELIABILITY</h3> <h2>100% Uptime</h2> <p>We use fast,
                     reliable website hosting for guaranteed uptime, leveraging a
@@ -124,7 +124,7 @@ blocks:
                     security.  </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-8.jpg
                 block-content-html: >-
                     <h3>SAFETY</h3> <h2>Backups & Security</h2> <p>We provide
                     daily backups of the website and guaranteed security against
@@ -132,7 +132,7 @@ blocks:
                     </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-9.jpg
                 block-content-html: >-
                     <h3>LEAD GENERATION</h3> <h2>Interactive elements</h2>
                     <p>From carousels & galleries to pop-ups and FAQs we’ll
@@ -140,7 +140,7 @@ blocks:
                     every marketing goal. </p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-10.jpg
                 block-content-html: >-
                     <h3>LEAD GENERATION</h3> <h2>Form builder</h2> <p>We’ll
                     build you a custom form builder to let your team add landing
@@ -148,7 +148,7 @@ blocks:
                     understanding code.</p>
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: /uploads/KC-Regent-Arch-11.jpg
                 block-content-html: >-
                     <h3>ESSENTIAL DATA</h3> <h2>Tracking & Analytics</h2>
                     <p>Full control over your tracking codes (including
@@ -168,19 +168,19 @@ blocks:
         text-box-max-width: 350px
         slider:
             -
-                image: https://picsum.photos/id/1025/600/400
+                image: uploads/KC-Regent-Arch-12.jpg
                 video_path:
                 video_type:
                 video_aspect_ratio:
                 link:
             -
-                image: /uploads/screenshot-2024-09-30-at-4-12-25-pm.png
+                image: uploads/KC-Regent-Arch-13.jpg
                 video_path: /uploads/WEBSITE-BANNER.mp4
                 video_type: mp4
                 video_aspect_ratio: 2
                 link:
             -
-                image: https://picsum.photos/id/1025/600/800
+                image: uploads/KC-Regent-Arch-14.jpg
                 video_path:
                 video_type:
                 video_aspect_ratio:
@@ -217,7 +217,7 @@ blocks:
         _id: banner-bg-fixed
         block-content-html: <h2>Every view, one to covet. <br /> Every moment, one to savour. <br /> Every stay, another story to tell. <br /> this is the place <br/> <br/> This is Regent </h2>
         content-max-width:
-        background-desktop-image: /uploads/screenshot-2025-06-05-at-3-19-14-pm-1.png
+        background-desktop-image: /uploads/regent-illustration.avif
         background-mobile-image:
         text-alignment: center
         vert-alignment: middle
