Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ blocks:
         autoplay: true
         text-alignment: center
         vert-alignment: middle
-        overlay-opacity: 0.2op
+        overlay-opacity: 0.2
         min-height: 80vh
         color-scheme: dark
     -
         _id: text-block-top-overlap
-        block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.\_Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><h3><div style="max-width:25rem; margin:auto; margin-bottom:2rem;">A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></span> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
+        block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.\_Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style=\"max-width:25rem; margin:auto; margin-bottom:2rem;\"><h3>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
         overlay-color-scheme: highlight
         content-max-width: 35rem
         text-alignment: center
