Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ blocks:
         color-scheme: dark
     -
         _id: text-block-top-overlap
-        block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks.\_Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style=\"max-width:25rem; margin:auto; margin-bottom:2rem;\"><h3>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
+        block-content-html: "<h3>REGENT BALI CANGGU</h3><h2 class=\"heading-lg\">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style=\"max-width:25rem; margin:auto; margin-bottom:2rem;\"><h3>A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href=\"\" class=\"button-featured\">DOWNLOAD PROPOSAL</a>"
         overlay-color-scheme: highlight
         content-max-width: 35rem
         text-alignment: center
@@ -136,7 +136,7 @@ blocks:
                 block-content-html: >-
                     <h3>LEAD GENERATION</h3> <h2>Interactive elements</h2>
                     <p>From carousels & galleries to pop-ups and FAQs we’ll
-                    create all the interactive elements you need to satsify
+                    create all the interactive elements you need to satisfy
                     every marketing goal. </p>
                 link:
             -
@@ -161,14 +161,14 @@ blocks:
         block-content-html: >-
             <h2> Spaces to explore</h2><p>Where most websites confine your
             content to rigid aspect ratios, we design with freedom in mind. Our
-            designs support felexible layouts that adapt seamlessly to your
+            designs support flexible layouts that adapt seamlessly to your
             unique imagery —whether it's panoramic, vertical, or cinematic—to
             tell your story in its most powerful form.</p>
         text-alignment: center
         text-box-max-width: 350px
         slider:
             -
-                image: uploads/KC-Regent-Arch-12.jpg
+                image: /uploads/KC-Regent-Arch-12.jpg
                 video_path:
                 video_type:
                 video_aspect_ratio:
