Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="">WORKING WITH US</h3><h2
+            <h3 class="lg-heading">WORKING WITH US</h3><h2
             class="">Extraordinary tailored digital
             presence</h2><p>With over a decade of experience in web development,
             and a dedication best-practices we’ll build you a website that’s not
