--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@ blocks:
         _id: banner-split-video
         block-content-html: >-
             <h3 class="sub-heading">High Impact Visuals</h3><h2
-            class="heading-lg">Designed to captivate & enchant</h2><p>With a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants. That brings the magic of the Regent brand to live on the screen and leverages all of the high-impact visuals we’ve created for you to a modern new website. Rich visual experiences, intentional storytelling and subtle animations & interactions give an experience that brings joy (and increases direct bookings). </p><p><a class="button"
-            href="https://bookings.sukhavatibali.com/en/product/panchakarma">Book
-            Now</a></p>
+            class="heading-lg">Designed to captivate & enchant</h2><p>With a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants. That brings the magic of the Regent brand to live on the screen and leverages all of the high-impact visuals we’ve created for you to a modern new website. Rich visual experiences, intentional storytelling and subtle animations & interactions give an experience that brings joy (and increases direct bookings). </p>
         background-desktop-image: /uploads/KC-Regent-Arch-1.jpg
         background-mobile-image: /uploads/KC-Regent-Arch-1.jpg
         videos:
@@ -63,7 +61,7 @@ blocks:
         scroll-items-color-scheme: highlight
         scroll-items:
             -
-                image: /uploads/KC-Regent-Arch-1.jpg
+                image: /uploads/regent-features-1.jpg
                 block-content-html: >-
                     <h3>VISUAL</h3> <h2>Brand aligned </h2> <p>We’ll custom
                     design your website to align with all the Regent brand
@@ -79,7 +77,7 @@ blocks:
                     experience. </p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-3.jpg
+                image: /uploads/regent-features-3.jpg
                 block-content-html: >-
                     <h3>FLEXIBLE</h3> <h2>Designed to grow</h2> <p>We’ll build
                     custom modular blocks that allow you to build unlimited
@@ -87,7 +85,7 @@ blocks:
                     your team to manage. </p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-4.jpg
+                image: /uploads/regent-features-4.jpg
                 block-content-html: >-
                     <h3>RESPONSIVE</h3> <h2>Mobile-friendly</h2> <p>We’ll ensure
                     the website not only looks great across every browser &
@@ -95,7 +93,7 @@ blocks:
                     users.</p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-5.jpg
+                image: /uploads/regent-features-5.jpg
                 block-content-html: >-
                     <h3>PERFORMANCE </h3> <h2>Optimised for speed</h2> <p>Built
                     with modern tech stack and optimised for speed & performance
@@ -103,7 +101,7 @@ blocks:
                     lighting fast. </p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-6.jpg
+                image: /uploads/regent-features-6.jpg
                 block-content-html: >-
                     <h3>SEARCH OPTIMISATION </h3> <h2>Built-in SEO</h2>
                     <p>Designed to meet all of Google’s performance standards &
@@ -111,7 +109,7 @@ blocks:
                     seamless SEO management. </p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-7.jpg
+                image: /uploads/regent-features-7.jpg
                 block-content-html: >-
                     <h3>RELIABILITY</h3> <h2>100% Uptime</h2> <p>We use fast,
                     reliable website hosting for guaranteed uptime, leveraging a
@@ -119,7 +117,7 @@ blocks:
                     security.  </p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-8.jpg
+                image: /uploads/regent-features-8.jpg
                 block-content-html: >-
                     <h3>SAFETY</h3> <h2>Backups & Security</h2> <p>We provide
                     daily backups of the website and guaranteed security against
@@ -127,23 +125,23 @@ blocks:
                     </p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-9.jpg
+                image: /uploads/regent-features-9.jpg
                 block-content-html: >-
-                    <h3>LEAD GENERATION</h3> <h2>Interactive elements</h2>
+                    <h3>ENGAGING</h3> <h2>Interactive elements</h2>
                     <p>From carousels & galleries to pop-ups and FAQs we’ll
                     create all the interactive elements you need to satisfy
                     every marketing goal. </p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-10.jpg
+                image: /uploads/regent-features-10.jpg
                 block-content-html: >-
-                    <h3>LEAD GENERATION</h3> <h2>Form builder</h2> <p>We’ll
+                    <h3>LEAD GENERATION</h3> <h2>Felxible Forms</h2> <p>We’ll
                     build you a custom form builder to let your team add landing
                     pages & tailored lead generation forms on-demand without
                     understanding code.</p>
                 link:
             -
-                image: /uploads/KC-Regent-Arch-11.jpg
+                image: /uploads/regent-features-11.jpg
                 block-content-html: >-
                     <h3>ESSENTIAL DATA</h3> <h2>Tracking & Analytics</h2>
                     <p>Full control over your tracking codes (including
@@ -187,31 +185,34 @@ blocks:
         block-content-html: <h3> FREQUENTLY ASKED QUESTIONS </h3>
         drop_down:
             -
-                button-text: 'How do I get there? '
+                button-text: 'Who are Kelapa Creative?'
                 block-content-html: >-
-                    <p>Each and every Ayurvedic health tool has been designed
-                    for those already with an idea of their mind-body type,
-                    which is known as Dosha. Understanding your Dosha can help
-                    you determine what foods, lifestyle choices and even body
-                    shape are healthiest for your individual self. Knowing your
-                    Dosha can help you cut through the maze of media spin when
-                    it comes to information on the latest fad diets or healthy
-                    eating practices. This can then enable you to make educated
-                    judgements that lead to healthy weight loss based on your
-                    mind-body type.</p>
+                    <p>We have over a decade of experience in web development, both as a creative agency working with luxury brands & hotels around the world and running a coding school, Institute of Code teaching best-practice web development. We bring not only a deep understanding of modern web standards, but also a well-rounded approach that takes into consideration the high level marketing strategy, content creation and website performence. As we've also been working with Regent Bali Canggu for over 12 months across architectural, lifestyle & social photogrpahy and monthly social media management we have an in-depth understanding of the brand. </p>
             -
-                button-text: 'Do you need a visa? '
-                block-content-html: ''
+                button-text: 'Will the website be flexible enough to grow with us?'
+                block-content-html: >-
+                    <p>Yes, we’ll build you a custom modular system that allows you to create unlimited pages and adapt to future needs, in a way that’s easy for your team to manage. We use an approach that balances flexibilty for the marketing team to adapt to their needs, with a strong emphasis on brand consisistency so that it's easy to make sure all changes stay aligned with the brand standards & look pixel-perfect on every device.</p>
             -
-                button-text: 'Is the accomodation private? '
-                block-content-html: ''
+                button-text: 'Is is easy to update content on the website?'  
+                block-content-html:  >-
+                    <p>We provide an integrated content management system that allows your team to easily update the website, add new pages, and manage content without needing to understand code. It's intuitive and user friendly, and we provide training and support to ensure your team is comfortable using the CMS.</p> 
             -
-                button-text: What’s the difference between the room types?
-                block-content-html: ''
+                button-text: How do you ensure reliability & ongoing upkeep?
+                block-content-html: >-
+                    <p>We use fast, reliable website hosting for guaranteed uptime, leveraging a content delivery network for global speed and SSL for security. We also provide daily backups of the website and guaranteed security against the site being hacked, including all code used in the site. We offer ongoing support and maintenance packages to ensure your website remains up-to-date and secure, and have built it with a modern texh stack to ensure it's future-proof and easy to maintain. </p>
+            -
+                button-text: How will the website be integrated with marketing tools & analytics?
+                block-content-html: >-
+                    <p>We’ll build you a custom form builder to let your team add landing pages & tailored lead generation forms on-demand without understanding code. We also provide full control over your tracking codes (including Facebook, Google, Pinterest), and analytics as well as any other verification you might need. We can integrate your preferred marketing platform (for example Mailchimp, ActiveCampaign, ConvertKit) into the website for advanced marketing features like exit-intent pop-ups for promotions, limited time offers etc. </p>
+            -
+                button-text: Will the website be optimised for performance & SEO?
+                block-content-html: >-
+                    <p> We consider all of the recommended best practices for SEO optimisation, including fast loading times, mobile-friendliness, and structured data. We’ll ensure the website not only looks great across every browser & device but also that it’s thoughtfully designed for mobile users which is a key factor in SEO rankings. We'll also provide built-in SEO tools to customise the meta titles, descriptions, urls and social sharing images for every page on the website and connect SEO monitoring tools like Google Search Console to monitor your progress. For performance we bechnmark against all key performance indicators utilising tools such as progressive lazy loading and image & video optimisation to ensure high performance even for media-rich websites. </p>
+                
         color-scheme: highlight
     -
         _id: banner-bg-fixed
-        block-content-html: <h2 class="text-sm md:text-xl leading-normal">Every view, one to covet. <br /> Every moment, one to savour. <br /> Every stay, another story to tell. <br /> this is the place <br/> <br/> This is Regent </h2>
+        block-content-html: <h2 class="text-sm md:text-xl/[1.7] leading-[1.7]" id="animated-text">Every view, one to covet. <br /> Every moment, one to savour. <br /> Every stay, another story to tell. <br /> This is the place. <br/> <br/> This is Regent. </h2>
         content-max-width:
         background-desktop-image: /uploads/regent-illustration.avif
         background-mobile-image:
@@ -226,7 +227,7 @@ blocks:
         max-width: 45rem
         text-alignment: center
         color-scheme: footer
-        min-height: 80vh
+        min-height: 50vh
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: Website Proposal by Kelapa Creative
