--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@ blocks:
         text-box-max-width: 35rem
         slider:
             -
-                image: /uploads/KC-Regent-Arch-12.jpg
-                video_path:
-                video_type:
-                video_aspect_ratio:
-                link:
-            -
-                image: uploads/KC-Regent-Arch-13.jpg
-                video_path: /uploads/WEBSITE-BANNER.mp4
+                image: /uploads/videos/bar-cover.jpg
+                video_path: /uploads/videos/bar-square-50k-HB.mp4
                 video_type: mp4
-                video_aspect_ratio: 2
+                video_aspect_ratio: 1
                 link:
             -
-                image: uploads/KC-Regent-Arch-14.jpg
-                video_path:
-                video_type:
-                video_aspect_ratio:
+                image: /uploads/videos/beach-cover.jpg
+                video_path: /uploads/videos/beach-insta-50k-HB.mp4
+                video_type: mp4
+                video_aspect_ratio: 0.8
+                link:
+            -
+                image: /uploads/videos/carving-cover.jpg
+                video_path: /uploads/videos/carving-50k-HB.mp4
+                video_type: mp4
+                video_aspect_ratio: 0.6
                 link:
         color-scheme: dark
         slider-col-padding: 0.5rem
