--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ blocks:
         min-height: 50vh
 seo:
     title: Regent Website Proposal | Kelapa Creative
-    description: Website Proposal by Kelapa Creative
+    description: Website Proposal by Kelapa Creative for Regent Bali Canggu, with a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants.
     image:
     favicon:
     index: true
