--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ blocks:
             -
                 video_path: /uploads/test-50k-kbs-wave-hb.mp4
                 video_type: mp4
-        placeholder_image: /uploads/rectangle-1.png
+        placeholder_image: /uploads/videos/ocean-cover.jpg
         controls: false
         autoplay: true
         text-alignment: center
@@ -160,12 +160,7 @@ blocks:
         text-alignment: center
         text-box-max-width: 35rem
         slider:
-            -
-                image: /uploads/videos/bar-cover.jpg
-                video_path: /uploads/videos/bar-square-50k-HB.mp4
-                video_type: mp4
-                video_aspect_ratio: 1
-                link:
+
             -
                 image: /uploads/videos/beach-cover.jpg
                 video_path: /uploads/videos/beach-insta-50k-HB.mp4
@@ -173,10 +168,82 @@ blocks:
                 video_aspect_ratio: 0.8
                 link:
             -
+                image: /uploads/KC-Regent-slider-1.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-2.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
                 image: /uploads/videos/carving-cover.jpg
                 video_path: /uploads/videos/carving-50k-HB.mp4
                 video_type: mp4
                 video_aspect_ratio: 0.6
+                link:
+            -
+                image: /uploads/KC-Regent-slider-3.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio:
+                link:
+            -
+                image: /uploads/KC-Regent-slider-4.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-5.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-6.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/videos/bar-cover.jpg
+                video_path: /uploads/videos/bar-square-50k-HB.mp4
+                video_type: mp4
+                video_aspect_ratio: 1
+                link:
+            -
+                image: /uploads/KC-Regent-slider-7.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-8.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-9.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-10.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
+                link:
+            -
+                image: /uploads/KC-Regent-slider-11.jpg
+                video_path: 
+                video_type: 
+                video_aspect_ratio: 
                 link:
         color-scheme: dark
         slider-col-padding: 0.5rem
