--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style="max-width:25rem; margin:auto; margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href="#" class="button-featured">DOWNLOAD PROPOSAL</a>
+            <h3>REGENT BALI CANGGU</h3><h2 class="heading-lg">A coastal haven where Bali's spirit unravels</h2><p>On Canggu Beach, surfers are silhouetted in the morning sun, boards  under arms ready to take on Bali's famous reef breaks. Watching the  waves, listening to the call of the Indian Ocean, you might catch the  scent of incense or the melody of the gamelan emitting from Pura Batu  Mejan, a centuries old sea temple set on rock as black as jet. A blessed way to begin each day.</p><div style="max-width:25rem; margin:auto; margin-bottom:2rem;"><h3 class="mt-8">A METICULOUSLY CURATED RESORT DESERVES AN INTENTIONALLY CRAFTED WEBSITE. LET US BUILD ONE FOR YOU.</h3></div> <a href="/uploads/KC-proposal.pdf" class="button-featured">DOWNLOAD PROPOSAL</a>
         overlay-color-scheme: highlight
         content-max-width: 35rem
         text-alignment: center
@@ -284,7 +284,8 @@ blocks:
         color-scheme: highlight
     -
         _id: text-block
-        block-content-html: "<h2>It would be our pleasure to work together on the new Regent Bali Canggu website.</h2><p></p><p>Our team combines high-end visual design with robust, future-focused development—delivering a digital experience that’s as elegant and intuitive as the property itself.<br /><br />We specialize in creating flexible, content-driven designs that showcase luxury spaces in their best light, capturing the essence of your property through elegant visuals, adaptive layouts, and a seamless user experience. Every element will be crafted to support your brand, engage your audience, and provide your team with intuitive tools for easy updates and future growth.<br />\L- Sincerely, Kelapa Creative Team.</p><p><a class=\"button-featured\" href=\"/temp.pdf\">DOWNLOAD PROPOSAL</a></p>"
+        block-content-html:  >-
+            <h2>It would be our pleasure to work together on the new Regent Bali Canggu website.</h2><p></p><p>Our team combines high-end visual design with robust, future-focused development—delivering a digital experience that’s as elegant and intuitive as the property itself.<br /><br />We specialize in creating flexible, content-driven designs that showcase luxury spaces in their best light, capturing the essence of your property through elegant visuals, adaptive layouts, and a seamless user experience. Every element will be crafted to support your brand, engage your audience, and provide your team with intuitive tools for easy updates and future growth.<br /> - Sincerely, Kelapa Creative Team.</p><p><a class="button-featured" href="/uploads/KC-proposal.pdf">DOWNLOAD PROPOSAL</a></p>
         max-width: 45rem
         text-alignment: center
         color-scheme: footer
