--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ blocks:
         _id: banner-split-video
         block-content-html: >-
             <h3 class="sub-heading">High Impact Visuals</h3><h2
-            class="heading-lg">Designed to captivate & enchant</h2><p>With a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants. That brings the magic of the Regent brand to live on the screen and leverages all of the high-impact visuals we’ve created for you to a modern new website. Rich visual experiences, intentional storytelling and subtle animations & interactions give an experience that brings joy (and increases direct bookings). </p>
+            class="heading-lg">Designed to captivate & enchant</h2><p>With a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants. That brings the magic of the Regent brand to life on the screen and leverages all of the high-impact visuals we’ve created for you to a modern new website. Rich visual experiences, intentional storytelling and subtle animations & interactions give an experience that brings joy (and increases direct bookings). </p>
         background-desktop-image: /uploads/KC-Regent-Arch-1.jpg
         background-mobile-image: /uploads/KC-Regent-Arch-1.jpg
         videos:
@@ -52,8 +52,8 @@ blocks:
             <h3>WORKING WITH US</h3><h2
             class="heading-lg">Extraordinary digital
             presence</h2><p>With over a decade of experience in web development,
-            and a dedication best-practices we’ll build you a website that’s not
-            only beautiful but that also optimised for speed, performance,
+            and a dedication to best-practices we’ll build you a website that’s not
+            only beautiful but that also is optimised for speed, performance,
             mobile-friendliness and SEO.</p>
         block-content-max-width: 40rem
         image-width: max(25%,  15rem)
@@ -135,7 +135,7 @@ blocks:
             -
                 image: /uploads/regent-features-10.jpg
                 block-content-html: >-
-                    <h3>LEAD GENERATION</h3> <h2>Felxible Forms</h2> <p>We’ll
+                    <h3>LEAD GENERATION</h3> <h2>Flexible Forms</h2> <p>We’ll
                     build you a custom form builder to let your team add landing
                     pages & tailored lead generation forms on-demand without
                     understanding code.</p>
@@ -254,13 +254,13 @@ blocks:
                 block-content-html: >-
                     <p>Yes, we’ll build you a custom modular system that allows you to create unlimited pages and adapt to future needs, in a way that’s easy for your team to manage. We use an approach that balances flexibilty for the marketing team to adapt to their needs, with a strong emphasis on brand consisistency so that it's easy to make sure all changes stay aligned with the brand standards & look pixel-perfect on every device.</p>
             -
-                button-text: 'Is is easy to update content on the website?'  
+                button-text: 'Is it easy to update content on the website?'  
                 block-content-html:  >-
                     <p>We provide an integrated content management system that allows your team to easily update the website, add new pages, and manage content without needing to understand code. It's intuitive and user friendly, and we provide training and support to ensure your team is comfortable using the CMS.</p> 
             -
                 button-text: How do you ensure reliability & ongoing upkeep?
                 block-content-html: >-
-                    <p>We use fast, reliable website hosting for guaranteed uptime, leveraging a content delivery network for global speed and SSL for security. We also provide daily backups of the website and guaranteed security against the site being hacked, including all code used in the site. We offer ongoing support and maintenance packages to ensure your website remains up-to-date and secure, and have built it with a modern texh stack to ensure it's future-proof and easy to maintain. </p>
+                    <p>We use fast, reliable website hosting for guaranteed uptime, leveraging a content delivery network for global speed and SSL for security. We also provide daily backups of the website and guaranteed security against the site being hacked, including all code used in the site. We offer ongoing support and maintenance packages to ensure your website remains up-to-date and secure, and have built it with a modern tech stack to ensure it's future-proof and easy to maintain. </p>
             -
                 button-text: How will the website be integrated with marketing tools & analytics?
                 block-content-html: >-
@@ -268,7 +268,7 @@ blocks:
             -
                 button-text: Will the website be optimised for performance & SEO?
                 block-content-html: >-
-                    <p> We consider all of the recommended best practices for SEO optimisation, including fast loading times, mobile-friendliness, and structured data. We’ll ensure the website not only looks great across every browser & device but also that it’s thoughtfully designed for mobile users which is a key factor in SEO rankings. We'll also provide built-in SEO tools to customise the meta titles, descriptions, urls and social sharing images for every page on the website and connect SEO monitoring tools like Google Search Console to monitor your progress. For performance we bechnmark against all key performance indicators utilising tools such as progressive lazy loading and image & video optimisation to ensure high performance even for media-rich websites. </p>
+                    <p> We consider all of the recommended best practices for SEO optimisation, including fast loading times, mobile-friendliness, and structured data. We’ll ensure the website not only looks great across every browser & device but also that it’s thoughtfully designed for mobile users which is a key factor in SEO rankings. We'll also provide built-in SEO tools to customise the meta titles, descriptions, urls and social sharing images for every page on the website and connect SEO monitoring tools like Google Search Console to monitor your progress. For performance we benchmark against all key performance indicators utilising tools such as progressive lazy loading and image & video optimisation to ensure high performance even for media-rich websites. </p>
                 
         color-scheme: highlight
     -
