Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -3,8 +3,7 @@ layout: default
 blocks:
     -
         _id: banner-video
-        block-content-html: >-
-            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto">
+        block-content-html: <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto">
         videos:
             -
                 video_path: /uploads/test-50k-kbs-wave-hb.mp4
@@ -14,13 +13,30 @@ blocks:
         autoplay: true
         text-alignment: center
         vert-alignment: middle
-        overlay-opacity: 0.2
+        overlay-opacity: 0.5op
         min-height: 90vh
         color-scheme: dark
-    
+    -
+        _id: text-block
+        block-content-html: >-
+            <h3 class="sub-heading">SUITES &amp; VILLAS</h3><h2
+            class="heading-lg">A coastal haven where Bali's spirit
+            unravels</h2><p>Espouse your preference of the one hundred and fifty
+            oceanside havens, including those with unrivalled sea or garden
+            vistas, direct lagoon-access, as well as a variety of suites,
+            two-bedroom penthouses and expansive villas with private
+            pools.</p><p><a class="button-featured" href="#">RESERVE NOW</a></p>
+        content-max-width: 500px
+        text-alignment: center
+        color-scheme: base
+        min-height: 50vh
 seo:
     title: Regent Website Proposal | Kelapa Creative
-    description: Website Proposal by Kelapa Creative for Regent Bali Canggu, with a strong understanding of both the Regent brand & the resort itself, we bring a depth of knowledge that allows us to thoughtfully create a digital experience that captivates and enchants.
+    description: >-
+        Website Proposal by Kelapa Creative for Regent Bali Canggu, with a
+        strong understanding of both the Regent brand & the resort itself, we
+        bring a depth of knowledge that allows us to thoughtfully create a
+        digital experience that captivates and enchants.
     image:
     favicon:
     index: true
